--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
+    "graphql-resolvers": "^0.4.2",
     "graphql-tag": "^2.12.6",
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^9.0.2",
