--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.9.4",
+    "apollo-server-core": "^3.12.1",
+    "apollo-server-express": "^3.12.1",
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "graphql": "^16.8.1",
