change paths in vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -19,7 +19,7 @@
   ],
   "headers": [
     {
-      "source": "/api/(.*)",
+      "source": "/dist/(.*)",
       "headers": [
         {
           "key": "Access-Control-Allow-Credentials",
@@ -43,7 +43,7 @@
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/api"
+      "destination": "/dist"
     }
   ]
 }
